--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
-    "require": {
-        "mongodb/mongodb": "^1.20"
-    }
+    "name": "dogancan/gamewiki",
+    "autoload": {
+        "psr-4": {
+            "Dogancan\\Gamewiki\\": "src/"
+        }
+    },
+    "authors": [
+        {
+            "name": "Dogancan Demir",
+            "email": "dogancandemir2001@gmail.com"
+        }
+    ],
+    "require": {}
 }
