--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,5 @@
             "email": "dogancandemir2001@gmail.com"
         }
     ],
-    "require": {"mongodb/mongodb": "^1.15"}
+    "require": {"mongodb/mongodb": "*"}
 }
